--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-day-picker": "^9.13.0",
     "react-dom": "^19.2.0",
     "react-markdown": "^10.1.0",
+    "react-resizable-panels": "^2.1.9",
     "react-router-dom": "^7.11.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
